# CESAR.school-Intro_Analises_Dados

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: Marlos_Ribeiro_Aula_03_Exercícios_Pandas.ipynb  aula01.ipynb  aula02.ipynb  teste.ipynb
notebooks/util/: tools.py
